# Loki2

./: .gitignore  Cargo.toml  FEATURES_COMPLETED.md  README.md  makefile  test_complete_functionality.sh  test_features.md
.cargo/: config.toml
.devcontainer/: .devcontainer.json
.github/workflows/: build-linux-to-win.yml  build-linux.yml  build-macos.yml  release-linux.yml  release-macos.yml  release-windows.yml  rust.yml
signatures-test/: exclusions.txt
signatures-test/yara/: faulty.yar
signatures/yara/: test.yar
src/: main.rs  modules.rs
src/helpers/: helpers.rs
src/modules/: filesystem_scan.rs  network_check.rs  process_check.rs
