[package]
name = "loki"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
yara = "*"
walkdir = "2.3.*"
rustop = "1.1.*"
arrayvec = "0.7.*"
flexi_logger = "*"
sysinfo = "*"
human_bytes = "0.4.*"
filesize = "*"
file-format = "*"
csv = "1.1.*"
md5 = "*"
sha1 = "*"
sha2 = "0.10.*"
hex = "0.4.*"
memmap = "0.7.*"
chrono = "*"